# BDiff

./: BDiff.py  CITATION.cff  LICENSE  README.md  README.new.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: python-package.yml  python-publish.yml
bdiff/: __init__.py  __main__.py  bdiff.py
front-end/: README.md  components.d.ts  eslint.config.ts  global.d.ts  index.html  package-lock.json  package.json  requirements.txt  tsconfig.app.json  upqiniu.ts  vite.config.ts
front-end/src/: App.vue  main.ts
front-end/src/assets/: base.css  element-plus.css  highlight-theme.css  main.css
front-end/src/components/: DiffDisplayAlignedSwitch.vue  DiffLegendItems.vue  DiffScriptsSidebar.vue  DiffSetting.vue  FileSelectItem.vue  GithubFilesSelector.vue  LanguageSelector.vue  RootReadme.vue  ThemeToggleButton.vue
front-end/src/components/code-container/: CodeContainer.vue  CodeTable.vue  CodeTableTr.vue  DiffActiveLineContainer.vue  DiffLinesContainer.vue
front-end/src/components/icons/: BiChevronLeft.vue  BiChevronRight.vue  BiGear.vue  BiMoonStarsFill.vue  BiSun.vue  LyChevronDown.vue  LyChevronUp.vue  LyFileNormal.vue
front-end/src/components/page-menu/: PageMenuContainer.vue  ToBottomButton.vue  ToTopButton.vue
front-end/src/router/: index.ts
front-end/src/stores/: diff-settings.ts  diff-sidebar.ts  diff.ts  files.ts  page.ts
front-end/src/utils/: functions.ts  injection-keys.ts  requests.ts
front-end/src/utils/diff/: content-lines.ts  diff-content.ts  diff-get.ts  diff-highlight.ts  diff-lines.ts  diff-modify.ts
front-end/src/views/: PageHome.vue  PagePrivacyPolicy.vue  PageSecurityPolicy.vue
tests/: requirements.txt
tests/st/: test_bdiff.py
tests/st/diff-cases/: edit_scripts
(+7 files in other folders)
