[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bdiff"
authors = [{ name = "Lu Yao" }, { email = "839377654@qq.com" }]
maintainers = [
    { name = "Lu Yao" },
    { email = "839377654@qq.com" },
    { name = "Yan Zhikang" },
    { email = "2951256653@qq.com" },
]
description = "BDiff is a block-aware and accurate text-based difference tool."
readme = "README.md"
license = { text = "Mulan PubL v2" }
dynamic = ["version"]
dependencies = ["numpy==1.26.4", "scipy==1.15.2"]
urls."Bug tracker" = "https://github.com/BDiff/BDiff/issues"
urls."Source code" = "https://github.com/BDiff/BDiff"

[tool.setuptools.dynamic]
version = { attr = "bdiff.__version__" }

[tool.setuptools.packages.find]
include = ["bdiff*"]
